zombie portal dont decay in water

--- a/Entities/Industry/ZombiePortal/ZombiePortal.cfg
+++ b/Entities/Industry/ZombiePortal/ZombiePortal.cfg
@@ -75,7 +75,7 @@ $name                                      = ZombiePortal
 @$scripts                                  = DefaultNoBuild.as;
 											 DefaultBuilding.as;
 											 AlignToTiles.as;
-											 DecayInWater.as;											 
+											#  DecayInWater.as;											 
 											 ZombiePortal.as;
 											 OneClassAvailable.as;
 											 #Shop.as;
