seperate spawns for natural zombies and portal zombies, zombie amount is now hard capped at 200 and, is based on the map size.

--- a/Rules/ZFB25d/zombies_vars.cfg
+++ b/Rules/ZFB25d/zombies_vars.cfg
@@ -4,7 +4,7 @@
 	spawn_time = 10
 	
 	#max zombies, will not go under 100
-	max_zombies = 100
+	max_zombies = 100 #reference zombie_rules.as line 44 for the new limit.
 	#num_zombiePortals = 31;
 	
 	
