--- a/Obescuria/Court/Neqrris_O_Lyr/Neqrris.cfg
+++ b/Obescuria/Court/Neqrris_O_Lyr/Neqrris.cfg
@@ -6,8 +6,8 @@
 
 $sprite_factory                      = generic_sprite
 
-@$sprite_scripts                     = Magnar.as;
-$sprite_texture                      = Magnar.png
+@$sprite_scripts                     = Neqrris.as;	
+$sprite_texture                      = Neqrris.png
 s32_sprite_frame_width               = 32
 s32_sprite_frame_height              = 32
 f32 sprite_offset_x                  = 0
@@ -94,10 +94,10 @@ bool block_lightpasses               = no
 bool block_snaptogrid                = no
 
 $movement_factory                    = generic_movement
-@$movement_scripts                   = MagnarApexCritter.as;
+@$movement_scripts                   = NeqrrisCritter.as;
 
 $brain_factory                       = generic_brain
-@$scripts                            = ObescuriaBrainApex.as;
+@$scripts                            = ObescuriaBrainBlood.as;
 
 $attachment_factory                  = box2d_attachment
 @$attachment_scripts                 = 
@@ -108,18 +108,17 @@ $inventory_factory                   =
 					  
 # general
 
-$name                                = magnar
+$name                                = neqrris
 @$scripts                            = FleshHitEffects.as;
 									   KnockBack.as;
-									   Magnar.as;
-                                       MagnarApexCritter.as;
-									   HuntApexLL.as;
-									   FyrApexLL.as;
-									   GravApexLL.as;
-									   FireArrow.as;
-f32 health                           = 11.0
+									   Neqrris.as;
+                                       NeqrrisCritter.as;
+									   SigilBloodLL.as;
+									   FyrBloodLL.as;
+									   BloodLettingLL.as;
+f32 health                           = 8.0
 # looks & behaviour inside inventory
-$inventory_name                      = Magnar The Apex Slayer
+$inventory_name                      = Neqrris O Lyr
 $inventory_icon                      = -             # default
 u8 inventory_icon_frame              = 0
 u8 inventory_icon_frame_width        = 0
