remove errors at the top of console

--- a/Entities/Characters/Assassin/Assassin.cfg
+++ b/Entities/Characters/Assassin/Assassin.cfg
@@ -315,7 +315,7 @@ ClimbTree.as;
                                                     FleshHitEffects.as;
                                                     PainSounds.as;
                                                     #DropLifeFiberOnDeath.as;
-FiberAutoPickup.as;
+# FiberAutoPickup.as;
 DropHeartOnDeath.as;
                                                     #FallDamage.as;
                                                     Stomp.as;
