--- a/Entities/Characters/Ranks/ThreeStarArcher/ThreeStarArcher2.cfg
+++ b/Entities/Characters/Ranks/ThreeStarArcher/ThreeStarArcher2.cfg
@@ -171,7 +171,7 @@ $name                                             = threestararcher2
 													FleshHitEffects.as;
 													PainSounds.as;
 													KnockBack.as;
-                                                    DropLifeFiberOnDeath.as;
+                                                    # DropLifeFiberOnDeath.as;
 													RunnerCollision.as;
 													FallDamage.as;
 													ClimbArrows.as;
