--- a/Entities/Characters/Ranksb/ThreeStarBuilder/ThreeStarBuilder2.cfg
+++ b/Entities/Characters/Ranksb/ThreeStarBuilder/ThreeStarBuilder2.cfg
@@ -228,7 +228,7 @@ $name                                             = threestarbuilder2
                                                     FleshHitEffects.as;
                                                     PainSounds.as;
                                                     KnockBack.as;
-                                                    DropLifeFiberOnDeath.as;
+                                                    # DropLifeFiberOnDeath.as;
                                                     RunnerCollision.as;
                                                     FallDamage.as;
                                                     Stomp.as;
