--- a/Entities/Characters/Ranksb/TwoStarBuilder/TwoStarBuilder2.cfg
+++ b/Entities/Characters/Ranksb/TwoStarBuilder/TwoStarBuilder2.cfg
@@ -227,7 +227,7 @@ $name                                             = twostarbuilder2
                                                     FleshHitEffects.as;
                                                     PainSounds.as;
                                                     KnockBack.as;
-                                                    DropLifeFiberOnDeath.as;
+                                                    # DropLifeFiberOnDeath.as;
                                                     RunnerCollision.as;
                                                     FallDamage.as;
                                                     Stomp.as;
