--- a/Entities/Characters/Ranksk/OneStarKnight/OneStarKnight2.cfg
+++ b/Entities/Characters/Ranksk/OneStarKnight/OneStarKnight2.cfg
@@ -312,7 +312,7 @@ $name                                             = onestarknight2
                                                     RunnerKnock.as;
                                                     FleshHitEffects.as;
                                                     PainSounds.as;
-                                                    DropLifeFiberOnDeath.as;
+                                                    # DropLifeFiberOnDeath.as;
                                                     FallDamage.as;
                                                     Stomp.as;
                                                     RunnerHead.as;
