--- a/Entities/Characters/Ranksk/ThreeStarKnight/ThreeStarKnight2.cfg
+++ b/Entities/Characters/Ranksk/ThreeStarKnight/ThreeStarKnight2.cfg
@@ -313,7 +313,7 @@ $name                                             = threestarknight2
                                                     RunnerKnock.as;
                                                     FleshHitEffects.as;
                                                     PainSounds.as;
-                                                    DropLifeFiberOnDeath.as;
+                                                    # DropLifeFiberOnDeath.as;
                                                     FallDamage.as;
                                                     Stomp.as;
                                                     RunnerHead.as;
