--- a/Entities/Industry/Dirtdrill/DirtDrill.cfg
+++ b/Entities/Industry/Dirtdrill/DirtDrill.cfg
@@ -77,7 +77,7 @@ $inventory_factory                                =
 $name                                             = dirtdrill
 @$scripts                                         = DecayInWater.as;
 													DirtDrill.as;
-													MaterialsFromTiles.as;
+													MaterialCommon2.as;
 													IsFlammable.as;
 													Wooden.as;
 													NoPlayerCollision.as;
