--- a/Entities/Characters/Polearm/Polearm.cfg
+++ b/Entities/Characters/Polearm/Polearm.cfg
@@ -313,7 +313,7 @@ $name                                             = Polearm
                                                     FleshHitEffects.as;
                                                     PainSounds.as;
                                                     #DropLifeFiberOnDeath.as;
-FiberAutoPickup.as;
+# FiberAutoPickup.as;
 DropHeartOnDeath.as;
                                                     FallDamage.as;
                                                     Stomp.as;
