--- a/Entities/Characters/Ranks/OneStarArcher/OneStarArcher2.cfg
+++ b/Entities/Characters/Ranks/OneStarArcher/OneStarArcher2.cfg
@@ -170,7 +170,7 @@ $name                                             = onestararcher2
 													FleshHitEffects.as;
 													PainSounds.as;
 													KnockBack.as;
-                                                    DropLifeFiberOnDeath.as;
+                                                    # DropLifeFiberOnDeath.as;
 													RunnerCollision.as;
 													FallDamage.as;
 													ClimbArrows.as;
