--- a/Entities/Characters/Uniforms/KnightUniforms/Skin/DarkArmor.cfg
+++ b/Entities/Characters/Uniforms/KnightUniforms/Skin/DarkArmor.cfg
@@ -6,7 +6,7 @@
 
 $sprite_factory                = generic_sprite
 
-@$sprite_scripts               = DarkKnight.as;
+@$sprite_scripts               = DarkArmor.as; #DarkKnight.as
 $sprite_texture                = Uniform.png
 s32_sprite_frame_width         = 16
 s32_sprite_frame_height        = 16
