--- a/Entities/Characters/Ranks/OneStarArcher/OneStarArcher.cfg
+++ b/Entities/Characters/Ranks/OneStarArcher/OneStarArcher.cfg
@@ -190,6 +190,7 @@ $name                                             = onestararcher
 													EmoteBubble.as;
 													DrawHoverMessages.as;
 													OnHitFailed.as;
+													CreateUniformOnDeath.as;
 													RunnerDrowning.as; # after redflash so it overrides the flash
 													FleshHit.as; # this gibs so leave it last
 													RunnerDeath.as; # this checks for "dead" so leave it last
