--- a/Entities/Characters/Ranks/ThreeStarArcher/ThreeStarArcher.cfg
+++ b/Entities/Characters/Ranks/ThreeStarArcher/ThreeStarArcher.cfg
@@ -191,6 +191,7 @@ $name                                             = threestararcher
 													EmoteBubble.as;
 													DrawHoverMessages.as;
 													OnHitFailed.as;
+													CreateUniformOnDeath.as;
 													RunnerDrowning.as; # after redflash so it overrides the flash
 													FleshHit.as; # this gibs so leave it last
 													RunnerDeath.as; # this checks for "dead" so leave it last
