--- a/Entities/Characters/Ranksb/ThreeStarBuilder/ThreeStarBuilder.cfg
+++ b/Entities/Characters/Ranksb/ThreeStarBuilder/ThreeStarBuilder.cfg
@@ -245,6 +245,7 @@ $name                                             = threestarbuilder
                                                     EmoteBubble.as;
                                                     DrawHoverMessages.as;
                                                     OnHitFailed.as;
+                                                    CreateUniformOnDeath.as;
                                                     RunnerDrowning.as; # after redflash so it overrides the flash
                                                     FleshHit.as; # this gibs so leave it last
                                                     RunnerDeath.as; # this checks for "dead" so leave it last
