--- a/Entities/Characters/Ranksb/TwoStarBuilder/TwoStarBuilder.cfg
+++ b/Entities/Characters/Ranksb/TwoStarBuilder/TwoStarBuilder.cfg
@@ -244,6 +244,7 @@ $name                                             = twostarbuilder
                                                     EmoteBubble.as;
                                                     DrawHoverMessages.as;
                                                     OnHitFailed.as;
+                                                    CreateUniformOnDeath.as;
                                                     RunnerDrowning.as; # after redflash so it overrides the flash
                                                     FleshHit.as; # this gibs so leave it last
                                                     RunnerDeath.as; # this checks for "dead" so leave it last
