--- a/Entities/Characters/Ranksp/OneStarPolearm/OneStarPolearm.cfg
+++ b/Entities/Characters/Ranksp/OneStarPolearm/OneStarPolearm.cfg
@@ -327,6 +327,7 @@ $name                                             = onestarpolearm
                                                     EmoteBubble.as;
                                                     DrawHoverMessages.as;
                                                     OnHitFailed.as;
+                                                    CreateUniformOnDeath.as;
                                                     RunnerDrowning.as; # after redflash so it overrides the flash
                                                     FleshHit.as; # this gibs so leave it last
                                                     RunnerDeath.as; # this checks for "dead" so leave it last
