--- a/Entities/Characters/Ranksp/ThreeStarPolearm/ThreeStarPolearm.cfg
+++ b/Entities/Characters/Ranksp/ThreeStarPolearm/ThreeStarPolearm.cfg
@@ -328,6 +328,7 @@ $name                                             = threestarpolearm
                                                     EmoteBubble.as;
                                                     DrawHoverMessages.as;
                                                     OnHitFailed.as;
+                                                    CreateUniformOnDeath.as;
                                                     RunnerDrowning.as; # after redflash so it overrides the flash
                                                     FleshHit.as; # this gibs so leave it last
                                                     RunnerDeath.as; # this checks for "dead" so leave it last
