--- a/Entities/Characters/Builder/Builder.cfg
+++ b/Entities/Characters/Builder/Builder.cfg
@@ -5,6 +5,7 @@
 $sprite_factory                                   = generic_sprite
 
 @$sprite_scripts                                  = StandardPickup.as;
+                          HighlightItems.as;
 													BuilderAnim.as;
 													FireAnim.as;
 													BlobPlacement.as;
@@ -93,7 +94,13 @@ f32 sprite_offset_y                               = -4
   $sprite_animation_strike_name                   = strike
   u16 sprite_animation_strike_time                = 2
   u8_sprite_animation_strike_loop                 = 1
-  @u16 sprite_animation_strike_frames             = 21; 22; 23; 29; 30; 22;
+  @u16 sprite_animation_strike_frames             = 21; 22; 23; 29; 30; 21;
+
+  # chop
+  $sprite_animation_chop_name                   = chop
+  u16 sprite_animation_chop_time                = 2
+  u8_sprite_animation_chop_loop                 = 1
+  @u16 sprite_animation_chop_frames             = 37; 38; 39; 47; 46; 37;
   
   # build
   $sprite_animation_build_name                   = build
