--- a/Entities/Industry/Trader2/Trader2.cfg
+++ b/Entities/Industry/Trader2/Trader2.cfg
@@ -71,7 +71,7 @@ $inventory_factory                         =
 # general
 
 $name                                      = trader2
-@$scripts                                  = #DefaultNoBuild.as;
+@$scripts                                  = DefaultNoBuild.as;
 											 DefaultBuilding.as;
 											 AlignToTiles.as;
 											 DecayInWater.as;											 
