--- a/Rules/ZFB25d/mapcycle.cfg
+++ b/Rules/ZFB25d/mapcycle.cfg
@@ -15,3 +15,6 @@ mapcycle =
 				Maps/Char_zb_9.png;
 				Maps/Char_zb_10.png;
 				Maps/ferrez_zombies_v1.png;
+				Maps/frogzombie.png;
+				Maps/islanders.png;
+				Maps/bullshit1.png
