updated mapcycle, added new map

--- a/Rules/ZFB25d/mapcycle.cfg
+++ b/Rules/ZFB25d/mapcycle.cfg
@@ -17,4 +17,5 @@ mapcycle =
 				Maps/ferrez_zombies_v1.png;
 				Maps/frogzombie.png;
 				Maps/islanders.png;
-				Maps/bullshit1.png
+				Maps/bullshit1.png;
+				Maps/guiftheadzombies.png;
