Update sprites for Advanced drill

--- a/Entities/Industry/Advanced Drill/Advanced_Drill.cfg
+++ b/Entities/Industry/Advanced Drill/Advanced_Drill.cfg
@@ -3,7 +3,7 @@
 $sprite_factory                                   = generic_sprite
 @$sprite_scripts                                  = Advanced_Drill.as;
 													FireAnim.as;
-$sprite_texture                                   = dirtdrill.png
+$sprite_texture                                   = Advanceddrill.png
 s32_sprite_frame_width                            = 32
 s32_sprite_frame_height                           = 16
 f32 sprite_offset_x                               = 0
