--- a/Entities/Industry/Advanced Drill/Advanced_Drill.cfg
+++ b/Entities/Industry/Advanced Drill/Advanced_Drill.cfg
@@ -81,11 +81,11 @@ $name                                             = advanceddrill
 													SetTeamToCarrier.as;
 													SetDamageToCarrier.as;
 f32 health                                        = 2.0
-$inventory_name                                   = Drill
+$inventory_name                                   = Advanced Drill
 $inventory_icon                                   = -
 u8 inventory_icon_frame                           = 0
 u8 inventory_icon_frame_width                     = 0
 u8 inventory_icon_frame_height                    = 0
-u8 inventory_used_width                           = 1
-u8 inventory_used_height                          = 1
+u8 inventory_used_width                           = 3
+u8 inventory_used_height                          = 2
 u8 inventory_max_stacks                           = 1
