--- a/Rules/ZFB25d/mapcycle.cfg
+++ b/Rules/ZFB25d/mapcycle.cfg
@@ -14,8 +14,10 @@ mapcycle =
 				Maps/Char_zb_8.png;
 				Maps/Char_zb_9.png;
 				Maps/Char_zb_10.png;
-				Maps/ferrez_zombies_v1.png;
+				Maps/ferrez_froghead_remix.png;
 				Maps/frogzombie.png;
 				Maps/islanders.png;
 				Maps/bullshit1.png;
 				Maps/guiftheadzombies.png;
+				Maps/zombiehouse.png;
+				Maps/zombiecove.png;
