modified zombie sprite

--- a/Entities/Natural/Animals/ZombieKnight/BossZombieKnight.cfg
+++ b/Entities/Natural/Animals/ZombieKnight/BossZombieKnight.cfg
@@ -8,7 +8,7 @@ $sprite_factory                      = generic_sprite
 
 @$sprite_scripts                     = BossZombieKnight.as;
 									   HealthBar.as;
-$sprite_texture                      = ZombieKnight.png
+$sprite_texture                      = ZombieKnightBOSS.png
 s32_sprite_frame_width               = 32
 s32_sprite_frame_height              = 32
 f32 sprite_offset_x                  = 0
