modified spawnpoint for zombies to be less resource intensive on server

--- a/Entities/Special/Zombie Spawns/ZombieSpawn.cfg
+++ b/Entities/Special/Zombie Spawns/ZombieSpawn.cfg
@@ -35,7 +35,7 @@ f32 sprite_offset_y                        = 0
 
   $sprite_animation_end                    = *end*
   						     
-# ball
+ball
 
 $shape_factory                             = box2d_shape
 
@@ -68,15 +68,15 @@ $inventory_factory                         =
 # general
 
 $name                                      = zombiespawn
-@$scripts                                  = DefaultNoBuild.as;
-											AlignToTiles.as;											 
-											ZombieSpawn.as;
-											WoodStructureHit.as;
-											Wooden.as;
-											IsFlammable.as;
-											BuildingEffects.as;
+@$scripts                                  = ZombieSpawn.as;
+											# DefaultNoBuild.as;
+											# AlignToTiles.as;											 
+											# WoodStructureHit.as;
+											# Wooden.as;
+											# IsFlammable.as;
+											# BuildingEffects.as;
                                             # IgnoreDamage.as;
-f32_health                                 = 999.0
+f32_health                                 = -1.0
 # looks & behaviour inside inventory
 $inventory_name                            = Zombie Spawn
 $inventory_icon                            = -
