--- a/Entities/Ferrezinhre/stribak_siegebow/gunstribaksiegebow.cfg
+++ b/Entities/Ferrezinhre/stribak_siegebow/gunstribaksiegebow.cfg
@@ -11,4 +11,4 @@ gun_speedmax            = 19.5
 gun_spread_angle        = 0.5
 gun_bullet_life         = 20.75
 gun_bullet_gravity      = 1.0
-gun_firesound           = fashot.ogg
+gun_firesound           = Siegebowshot.ogg
