--- a/Entities/Ferrezinhre/stribak_handcannon/gunstribakcannon.cfg
+++ b/Entities/Ferrezinhre/stribak_handcannon/gunstribakcannon.cfg
@@ -1,5 +1,5 @@
-gun_fire_delay_ticks    = 30
-gun_fullauto            = false
+gun_fire_delay_ticks    = 15
+gun_fullauto            = true
 gun_clip_size           = 3
 gun_reload_ticks        = 10
 gun_reload_start_sound  = rifle_clip_in.ogg
@@ -10,6 +10,6 @@ gun_speedmin            = 14.25
 gun_speedmax            = 14.5
 gun_spread_angle        = 5.5
 gun_bullet_life         = 4.75
-gun_bullet_gravity      = 2.5
+gun_bullet_gravity      = 1.25
 gun_firesound           = fashot.ogg
 gun_disable_if_menu     = true
