--- a/Rules/ZFB25d/mapcycle.cfg
+++ b/Rules/ZFB25d/mapcycle.cfg
@@ -20,4 +20,6 @@ mapcycle =
 				Maps/bullshit1.png;
 				Maps/guiftheadzombies.png;
 				Maps/zombiehouse.png;
-				Maps/zombiecove.png;
+				Maps/zombiecove.png;`
+				Maps/mapforfrogfromcanada.png;
+				dungeonrush01-bedrock.png;
