--- a/Entities/Ferrezinhre/stribak_anarchy/Anarchyammo0/Anarchyammo0.cfg
+++ b/Entities/Ferrezinhre/stribak_anarchy/Anarchyammo0/Anarchyammo0.cfg
@@ -40,10 +40,10 @@ $sprite_animation_end                             = *end*
 
 $shape_factory                                    = box2d_shape
 @$shape_scripts                                   =
-f32 shape_mass                                    = 58.0
+f32 shape_mass                                    = 0.2
 f32 shape_radius                                  = 4.6
-f32 shape_friction                                = 0.35
-f32 shape_elasticity                              = 0.0
+f32 shape_friction                                = 0.2
+f32 shape_elasticity                              = 0.1
 f32 shape_buoyancy                                = 0.6
 f32 shape_drag                                    = 0.6
 bool shape_collides                               = yes
@@ -68,9 +68,10 @@ $inventory_factory                                =
 $name                                             = anarchyammo0 
 @$scripts                                         = 
 													Anarchyammo0.as;
+													ExplodeOnDie.as;
 													Wooden.as;
 													SetTeamToCarrier.as;
-f32_health                                        = 1.0
+f32_health                                        = 0.1
 $inventory_name                                   = Anarchyammo0
 $inventory_icon                                   = -
 u8 inventory_icon_frame                           = 7
