added decay to disc + modified health of tiered classes

--- a/Entities/Items/Gramophone/MusicDisc/MusicDisc.cfg
+++ b/Entities/Items/Gramophone/MusicDisc/MusicDisc.cfg
@@ -161,6 +161,7 @@ $name                                             = musicdisc
 													MusicDisc.as; 
 													IsFlammable.as;
 													NoPlayerCollision.as;
+													DecayIfSpammed;
 f32 health                                        = 1.0
 $inventory_name                                   = Gramophone Record
 $inventory_icon                                   = -
