--- a/Entities/Ferrezinhre/Fanatic/Fanatic.cfg
+++ b/Entities/Ferrezinhre/Fanatic/Fanatic.cfg
@@ -72,6 +72,7 @@ $name                          = fanatic
 								 FanaticMind.as;
 								 helping.as;
 								 FanaticAttack.as;
+								 ADA.as;
 								 
 f32 health                     = 5.0
 # looks & behaviour inside inventory
