made the slug drain life overtime

--- a/Entities/Ferrezinhre/stribak_gauntlet/Slug/Slug.cfg
+++ b/Entities/Ferrezinhre/stribak_gauntlet/Slug/Slug.cfg
@@ -63,8 +63,9 @@ $inventory_factory                  =
 
 $name                               = slug
 @$scripts                           = 	Slug.as;
+										AttachToZombies.as;
 										SetTeamToCarrier.as;
-f32 health                          = 1.5
+f32 health                          = 1000.5
 # looks & behaviour inside inventory
 $inventory_name                     = Slug
 $inventory_icon                     = -             # default
