--- a/Rules/ZFB25d/team1.cfg
+++ b/Rules/ZFB25d/team1.cfg
@@ -1,6 +1,6 @@
 # rules for game team
 # description:
     
-    name = Blue Team
+    name = Sovereign Republic of Glamarah
     teamcolor = 25; 94; 157
     
