--- a/Ferrez_Obescuria/Court/Neqrris_O_Lyr/Neqrris.cfg
+++ b/Ferrez_Obescuria/Court/Neqrris_O_Lyr/Neqrris.cfg
@@ -113,10 +113,12 @@ $name                                = neqrris
 									   KnockBack.as;
 									   Neqrris.as;
                                        NeqrrisCritter.as;
-									   SigilBloodLL.as;
-									   FyrBloodLL.as;
 									   BloodLettingLL.as;
-f32 health                           = 12.0
+									   FyrBloodLL.as;
+									   SigilBloodLL.as;
+									   SigilNeqrrisRage.as;
+
+f32 health                           = 50.0
 # looks & behaviour inside inventory
 $inventory_name                      = Neqrris O Lyr
 $inventory_icon                      = -             # default
