--- a/Entities/Industry/Castle Shop/Castleshop.cfg
+++ b/Entities/Industry/Castle Shop/Castleshop.cfg
@@ -3,10 +3,9 @@
 $sprite_factory                                   = generic_sprite
 @$sprite_scripts                                  = Stone.as;
 													FireAnim.as;
-													Storage.as;
-$sprite_texture                                   = Storage.png
-s32_sprite_frame_width                            = 40
-s32_sprite_frame_height                           = 24
+$sprite_texture                                   = Castle.png
+s32_sprite_frame_width                            = 88
+s32_sprite_frame_height                           = 56
 f32 sprite_offset_x                               = 0
 f32 sprite_offset_y                               = 0
 
@@ -40,10 +39,10 @@ bool shape_collides                               = no
 bool shape_ladder                                 = no
 bool shape_platform                               = no
 @f32 verticesXY                                   = 0.0; 0.0;
-													40.0; 0.0;
-													40.0; 24.0;
-													0.0; 24.0;
-u8 block_support                                  = 1
+													88.0; 0.0;
+													88.0; 56.0;
+													0.0; 56.0;
+u8 block_support                                  = 0
 bool block_background                             = yes
 bool block_lightpasses                            = yes
 bool block_snaptogrid                             = no
@@ -74,13 +73,13 @@ $name                                             = castle
 													BuildingEffects.as;
 													GenericDestruction.as;
 													RandomExitVelocity.as;
-f32_health                                        = 6.0
+f32_health                                        = 25.0
 # looks & behaviour inside inventory
 $inventory_name                                   = Castle
-$inventory_icon                                   = Storage.png
+$inventory_icon                                   = Castle.png
 u8 inventory_icon_frame                           = 3
-u8 inventory_icon_frame_width                     = 40
-u8 inventory_icon_frame_height                    = 24
+u8 inventory_icon_frame_width                     = 88
+u8 inventory_icon_frame_height                    = 56
 u8 inventory_used_width                           = 0
 u8 inventory_used_height                          = 0
 u8 inventory_max_stacks                           = 0
