added spec team

--- a/Rules/ZFB25d/gamemode.cfg
+++ b/Rules/ZFB25d/gamemode.cfg
@@ -2,7 +2,7 @@
 # rules name: CTF    
 # rules description:
     
-    teams                              = team1.cfg;
+    teams                              = team1.cfg; team1.cfg;
     
     gamemode_name                      = ZFB24
     gamemode_info                      = ZF Hard. Increased zombie range and limit, Boss spawns each 4 days. Survive as many days as possible!
