--- a/Entities/Industry/Castle Shop/Castleshop.cfg
+++ b/Entities/Industry/Castle Shop/Castleshop.cfg
@@ -3,6 +3,7 @@
 $sprite_factory                                   = generic_sprite
 @$sprite_scripts                                  = Stone.as;
 													FireAnim.as;
+													HealthBar.as;
 $sprite_texture                                   = Castle.png
 s32_sprite_frame_width                            = 88
 s32_sprite_frame_height                           = 56
@@ -57,15 +58,14 @@ $attachment_factory                               = box2d_attachment
 
 $inventory_factory                                = generic_inventory
 @$inventory_scripts                               = 
-u8 inventory_slots_width                          = 2
-u8 inventory_slots_height                         = 2
+u8 inventory_slots_width                          = 7
+u8 inventory_slots_height                         = 5
 $inventory_name                                   = Storage
 
 $name                                             = castle
 @$scripts                                         = DefaultNoBuild.as;
 													DefaultBuilding.as;
 													AlignToTiles.as;
-													TunnelTravel.as;
 													DecayInWater.as;
 													Castleshop.as;
 													WoodStructureHit.as;
