--- a/Rules/ZFB25d/gamemode.cfg
+++ b/Rules/ZFB25d/gamemode.cfg
@@ -8,6 +8,7 @@
     gamemode_info                      = ZF Hard. Increased zombie range and limit, Boss spawns each 4 days. Survive as many days as possible!
     
     scripts                            = KAG.as; zombies_Rules.as;
+										 leveling_system.as;
 										 rcon_pinger.as;
 										 zombies_Interface.as;
 										 zombies_Technology.as;
