--- a/Entities/Ferrezinhre/Machine_God_Perfected/Ernaz.cfg
+++ b/Entities/Ferrezinhre/Machine_God_Perfected/Ernaz.cfg
@@ -90,7 +90,7 @@ f32 sprite_offset_y                  = -14
 $shape_factory                       = box2d_shape
 
 @$shape_scripts                      = 
-f32 shape_mass                       = 450.0
+f32 shape_mass                       = 700.0
 f32 shape_radius                     = 0.0
 f32 shape_friction                   = 0.1
 f32 shape_elasticity                 = 0.3
@@ -129,11 +129,10 @@ $inventory_factory                   =
 $name                                = ernaz
 @$scripts                            = AnimalRiding.as;
 									   Seats.as;									  
-									   FleshHitEffects.as;
-									   FleshHit.as;
 									   LLandAnimal.as;
 									   Ernaz.as;
 									   Shoot_command_arc.as;
+									   Shoot_command_HADES.as;
 
 
 f32 health                           = 20.0
