--- a/Ferrez_Obescuria/BrytirTheSeer/Tanhiz/Tanhiz.cfg
+++ b/Ferrez_Obescuria/BrytirTheSeer/Tanhiz/Tanhiz.cfg
@@ -7,7 +7,7 @@
 $sprite_factory                = generic_sprite
 
 @$sprite_scripts               = 
-$sprite_texture                = Shell.png
+$sprite_texture                = Tanhiz.png
 s32_sprite_frame_width         = 7
 s32_sprite_frame_height        = 7
 f32 sprite_offset_x            = 0
