--- a/Ferrez_Obescuria/Court/Neqrris_O_Lyr/Neqrris.cfg
+++ b/Ferrez_Obescuria/Court/Neqrris_O_Lyr/Neqrris.cfg
@@ -117,6 +117,7 @@ $name                                = neqrris
 									   FyrBloodLL.as;
 									   SigilBloodLL.as;
 									   SigilNeqrrisRage.as;
+									   NeqrrisToranoi.as;
 
 f32 health                           = 50.0
 # looks & behaviour inside inventory
