--- a/Ferrez_Obescuria/Vroon/HuntLock.cfg
+++ b/Ferrez_Obescuria/Vroon/HuntLock.cfg
@@ -108,7 +108,7 @@ $name                                = vroon
 									   HuntLock.as;
 									   #IsFlammable.as;
                                        HuntLockCritter.as;
-									   HuntlockLL.as;
+									   TESR.as;
 f32 health                           = 1.5
 # looks & behaviour inside inventory
 $inventory_name                      = Vroon
