made all the mapcycle the same

--- a/Rules/ZFB25d/mapcycle1.cfg
+++ b/Rules/ZFB25d/mapcycle1.cfg
@@ -1,12 +1,23 @@
 #small cycle
 
 mapcycle = 
-            Maps/Char_zb_1.png;
-            Maps/bullshit1.png;
-            Maps/Char_zb_3.png;
-            Maps/Char_zb_4.png;
-            Maps/Char_zb_5.png;
-            Maps/Char_zb_6.png;
-            Maps/Char_zb_7.png;
-            Maps/Char_zb_9.png;
-            Maps/islanders.png;
+				Maps/Char_zb_1.png;
+				Maps/Char_zb_2.png;
+				Maps/Char_zb_3.png;
+				Maps/Char_zb_4.png;
+				Maps/Char_zb_5.png;
+				Maps/abyss1_v1.png;
+				Maps/Char_zb_6.png;
+				Maps/Char_zb_7.png;
+				Maps/Char_zb_8.png;
+				Maps/Char_zb_9.png;
+				Maps/Char_zb_10.png;
+				Maps/ferrez_froghead_remix.png;
+				Maps/frogzombie.png;
+				Maps/islanders.png;
+				Maps/bullshit1.png;
+				Maps/guiftheadzombies.png;
+				Maps/zombiehouse.png;
+				Maps/zombiecove.png;`
+				Maps/mapforfrogfromcanada.png;
+				dungeonrush01-bedrock.png;
