--- a/Entities/Items/Explosives/Mine.cfg
+++ b/Entities/Items/Explosives/Mine.cfg
@@ -85,6 +85,7 @@ $name                                   = mine
 										  GenericHit.as;
 										  CheapFakeRolling.as;
 										  ExplodeOnDie.as;
+										  DecayIfSpammed;
 										  
 f32 health                              = 3.0
 # looks & behaviour inside inventory
