nerfed tree nursery, decay if spammed

--- a/Entities/Industry/OldBuildings/Nursery/Nursery.cfg
+++ b/Entities/Industry/OldBuildings/Nursery/Nursery.cfg
@@ -88,6 +88,8 @@ $name                                      = nursery
 											 IsFlammable.as;
 											 BuildingEffects.as;
 											 AutoGrabFromGround.as;
+											 DecayIfSpammed;
+
 f32_health                                 = 5.0
 # looks & behaviour inside inventory
 $inventory_name                            = Nursery
