--- a/Rules/ZFB25d/mapcycle.cfg
+++ b/Rules/ZFB25d/mapcycle.cfg
@@ -1,23 +1,23 @@
 #full cycle
 
 mapcycle =
-				#Char
-				Maps/Char_zb_1.png;
+				# Maps/Char_zb_1.png;
+				Maps/neobind_beanland;
 				Maps/Char_zb_2.png;
 				Maps/Char_zb_3.png;
 				Maps/Char_zb_4.png;
 				Maps/Char_zb_5.png;
-				Maps/abyss1_v1.png;
-				Maps/Char_zb_6.png;
+				# Maps/abyss1_v1.png;
+				# Maps/Char_zb_6.png;
 				Maps/Char_zb_7.png;
-				Maps/Char_zb_8.png;
+				# Maps/Char_zb_8.png;
 				Maps/Char_zb_9.png;
-				Maps/Char_zb_10.png;
-				Maps/ferrez_froghead_remix.png;
+				# Maps/Char_zb_10.png;
+				# Maps/ferrez_froghead_remix.png;
 				Maps/frogzombie.png;
-				Maps/islanders.png;
-				Maps/bullshit1.png;
+				# Maps/islanders.png;
+				# Maps/bullshit1.png;
 				Maps/guiftheadzombies.png;
-				Maps/zombiehouse.png;
-				Maps/zombiecove.png;`
-				Maps/mapforfrogfromcanada.png;
+				# Maps/zombiehouse.png;
+				# Maps/zombiecove.png;`
+				# Maps/mapforfrogfromcanada.png;
